# ASCII-cpp

./: .gitignore  CMakeLists.txt  README.md  customColors.txt  main.cpp  todo.txt
Images-OUT/: gg.txt  gganderson.txt
include/: asciirenderer.h  colorhelper.h
src/: asciirenderer.cpp  colorhelper.cpp  main.cpp
